--- a/public/index.html
+++ b/public/index.html
@@ -6,22 +6,22 @@
 
     <!-- Edit meta tags for SEO -->
     <title>DeveloperFolio | Developer Portfolio Template</title>
-    <meta name="title" content="DeveloperFolio | Developer Portfolio Template">
-    <meta name="description" content="Software Developer Portfolio Template that helps you showcase your work and skills as a software developer">
+    <meta name="title" content="Taha Mahmood">
+    <meta name="description" content="Portfolio to help you showcase my work and skills as a data scientist">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://developerfolio.js.org/">
-    <meta property="og:title" content="DeveloperFolio | Developer Portfolio Template">
-    <meta property="og:description" content="Software Developer Portfolio Template that helps you showcase your work and skills as a software developer">
+    <meta property="og:title" content="Taha Mahmood">
+    <meta property="og:description" content="Portfolio to help you showcase my work and skills as a data scientist">
     <!-- Link to a hosted image -->
     <!-- <meta property="og:image" content=""> -->
     
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://developerfolio.js.org/">
-    <meta property="twitter:title" content="DeveloperFolio | Developer Portfolio Template">
-    <meta property="twitter:description" content="Software Developer Portfolio Template that helps you showcase your work and skills as a software developer">
+    <meta property="twitter:title" content="Taha Mahmood">
+    <meta property="twitter:description" content="Portfolio to help you showcase my work and skills as a data scientist">
     <!-- Link to a hosted image -->
     <!-- <meta property="twitter:image" content=""> -->
 
